# plasticdevour

./: .gitattributes  .gitignore  .gitmodules  README.md  requirements.txt
detect/: Makefile  output.csv
detect/lib/: README.md
detect/lib/opencv/: build_params.txt
detect/lib/opencv/lib/: libopencv_calib3d.so.4.5.3  libopencv_core.so.4.5.3  libopencv_features2d.so.4.5.3  libopencv_flann.so.4.5.3  libopencv_gapi.so.4.5.3  libopencv_highgui.so.4.5.3  libopencv_imgproc.so.4.5.3  libopencv_ml.so.4.5.3  libopencv_objdetect.so.4.5.3  libopencv_stitching.so.4.5.3
detect/mob/: labels.txt
detect/python/: detect.py  main.py
detect/src/: main.cpp
detect/src/gpio/: gpio.c  gpio.cpp  gpio.h
model/openvino/: labelmap.txt
model/openvino/mob/ncs2/: model.mapping
model/tensorflow/export/mob/checkpoint/: checkpoint
model/tensorflow/images/: partition.py
workspace/detect/: Makefile  detect.py  gpio.py
workspace/detect/lib/opencv/: version.txt
workspace/detect/lib/opencv/cmake/: OpenCVConfig.cmake  OpenCVModules-release.cmake
workspace/detect/lib/opencv/lib/: libopencv_imgcodecs.so.4.5.3  libopencv_photo.so.4.5.3  libopencv_video.so.4.5.3  libopencv_videoio.so.4.5.3
workspace/detect/src/: main.cpp
workspace/detect/src/gpio/: gpio.h
workspace/model/openvino/mob/ncs2/: trshbt.py
workspace/model/tensorflow/images/: generate_tfrecords.py
workspace/openvino/mob/ncs2/: model.xml
workspace/tensorflow/annotations/: labelmap.pbtxt
workspace/trshbt/: CMakeLists.txt  trshbt
workspace/trshbt/export/: test-model.ipynb
workspace/trshbt/src/: main.cpp
(+4 files in other folders)
